Fixed blurry equipment picture on profile page and fixed overspill of navigation elements on profile page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,14 +103,19 @@ div.quest-description {
 
 
 
-
+.select2-results__option  img{
+  width:50px;
+  height:50px;
+}
 
 .equipment-container{
   margin-top: 50px;
   border:rgb(175, 168, 168) solid 5px;
 }
 span.select2 {
-  width: 100% !important;
+  width: 150px !important;
+  font-size: small;
+
 }
 
 
